fixed the body being out of place

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -2,24 +2,19 @@
   width: 20%;
 }
 
-.add-to-cart-btn {
-  background-color: #353966;
-  color: white;
-  border: none;
+.add-to-cart-button {
   margin: 4px 2px;
   padding: 20px;
-  border-radius: 8px;
-}
-
-.add-to-cart-btn:hover {
-  background-color: #191c41;
-  color: white;
 }
 
 #body {
   display: flex;
   text-align: center;
   padding-top: 15px;
+}
+
+#filter-button {
+  padding: 8px 18px 8px 18px
 }
 
 #nav-bar {
@@ -56,6 +51,22 @@
   font-size: larger;
 }
 
+#search-results-tools {
+  margin-bottom: 10px;
+}
+
+.standard-button{
+  background-color: #353966;
+  color: white;
+  border: none;
+  border-radius: 8px;
+}
+
+.standard-button:hover{
+  background-color: #191c41;
+  color: white;
+}
+
 .unstyled-link {
   text-decoration: none;
   color: #353966;
@@ -72,5 +83,6 @@
 }
 
 .view {
+  margin-top: 20px;
   text-align: center;
 }
